Add /api/auth/me endpoint Fixes #19
